Adjust buttons animation and responsivness

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -48,7 +48,7 @@
               </div>
             </td>
             <td>
-              <h5>€ {{ item.product.price }}</h5>
+              <p>€ {{ item.product.price }}</p>
             </td>
             <td class="column_centered">
               <div class="product_count">
@@ -61,7 +61,7 @@
             </td>
             
             <td class="column_right">
-              <h5 id="number-align-right">€{{ item.product.price }}</h5>
+              <p id="number-align-right">€{{ item.product.price }}</p>
             </td>
           </tr>
           {% endfor %}
@@ -94,10 +94,12 @@
 
         </tbody>
       </table>
-      <div class="checkout_btn_inner float-right">
-        <a class="btn_1" href="{% url 'products' %}">Continue Shopping</a>
-        <a class="btn_1 checkout_btn_1" href="{% url 'checkout' %}">Proceed to checkout</a>
+      <div class="btn-group float-right">
+      <div class="checkout_btn_inner">
+        <a class="btn_1 text-white m-2" href="{% url 'products' %}">Continue Shopping</a>
+        <a class="btn_1 checkout_btn_1 text-white m-2" href="{% url 'checkout' %}">Proceed to checkout</a>
       </div>
+    </div>
     
     {% else %}
         <p><h6>Your shopping cart is empty.</h6></p>
