--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -39,7 +39,7 @@
                     {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn_1" href="{% url 'products' %}">Cancel</a>
+                    <a class="btn_1 text-white" href="{% url 'products' %}">Cancel</a>
                     <button class="btn_1" type="submit">Update Painting</button>
                 </div>
             </form>
