--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -47,9 +47,9 @@
         </a>
         <a href="{% url 'products' %}" class="btn_1 btn-block rounded-0">
           <span class="icon">
-            <i class="fa-solid fa-cart-shopping mr-2 text-white"></i>
+            <i class="fa-solid fa-cart-shopping mr-2"></i>
           </span>
-          <span class="text-uppercase text-white">Continue Shopping</span>
+          <span class="text-uppercase">Continue Shopping</span>
         </a>
       </div>
     </div>
