--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -41,10 +41,10 @@
           </p>
           <div class="row">
             <div class="col-7 offset-2">
-              <p class="mb-1 mt-0 small text-muted">Painting</p>
+              <p class="mb-1 mt-0 text-muted">Title</p>
             </div>
             <div class="col-3 text-right">
-              <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+              <p class="mb-1 mt-0 text-muted">Subtotal</p>
             </div>
           </div>
           {% for item in order.lineitems.all %}
@@ -62,7 +62,7 @@
               <p class="my-0"><strong>{{ item.product.name }}</strong></p>
             </div>
             <div class="col-3 text-right">
-              <p class="my-0 small text-muted">€{{ item.product.price }}</p>
+              <p class="my-0 text-muted">€{{ item.product.price }}</p>
             </div>
           </div>
           {% endfor %}
@@ -126,9 +126,9 @@
     <div class="row">
       <div class="col-lg-12">
         {% if from_profile %}
-        <a class="btn_1" href="{% url 'profile' %}">Back to Profile</a>
+        <a class="btn_1 text-white" href="{% url 'profile' %}">Back to Profile</a>
         {% else %}
-        <a class="btn_1" href="{% url 'products' %}">Back to Gallery</a>
+        <a class="btn_1 text-white" href="{% url 'products' %}">Back to Gallery</a>
         {% endif %}
       </div>
     </div>
