--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,31 +29,31 @@
         </div>      
       </div>
     </div>
-    <div class="col-8 offset-md-2">
+    <div class="col-12">
         <div class="single_product_text text-center">
             <h3>{{ product.name }}</h3>
             <p>{{ product.category.friendly_name }}</p>
             <hr>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="single_product_text text-center">
                 <h4>Format:</h4>
                 <p>{{ product.format }}</p>
             </div>
         </div>
-            <div class="col-lg-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <div class="single_product_text text-center">
                   <h4>Dimension:</h4>
                   <p>{{ product.size }}</p>
               </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="single_product_text text-center">
                 <h4>Technique:</h4>
                 <p>{{ product.technique }}</p>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-12 col-sm-6 col-md-3">
           <div class="single_product_text text-center">
               <h4>Framed:</h4>
               <p>{{ product.framed }}</p>
@@ -69,28 +69,47 @@
                 <p class="price">€ {{ product.price }}</p>
                 <div class="row">
                   <div class="col-12">
-                    <span>
-                <form class="form" method="POST" action="{% url 'add_to_cart' product.id %}">
-                  {% csrf_token %}
-                  <input class="form-control qty-input" type="hidden" name="quantity" 
-                    value="1" min="0" max="1" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                    <div class="btn-group">
-              <input type="submit" class="btn_3" value="Add to cart">  
-              <a href="{% url 'products' %}" class="btn_3">Continue shopping</a>
-              <input type="hidden" name="redirect_url" value="{{ request.path }}">
-            </form>
-        {% endif %}  
-        {% if request.user.is_superuser %}
 
-            <a href="{% url 'edit_product' product.id %}" class="btn_3" title="Update">Update</a>
-            <a href="{% url 'delete_product' product.id %}" class="btn_3 confirm-delete" title="Delete">Delete</a>
-        {% endif %}
+    </div>
+      </div>
+    </div>
+
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+<div class="row text-center">
+  <div class="col-12">    
+      <form class="form" method="POST" action="{% url 'add_to_cart' product.id %}">
+        {% csrf_token %}
+        <div class="btn-group">
+        <input class="form-control qty-input" type="hidden" name="quantity" value="1" min="0" max="1"
+          data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+        <input type="submit" class="btn_1 m-2" role="button" value="Add to cart">      
+        <a href="{% url 'products' %}" class="btn_1 text-white m-2" role="button">Continue shopping</a>
+        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+      </div>
+      </form>
+  </div>
+</div>
+{% endif %}  
+{% if request.user.is_superuser %}
+<div class="row text-center m-2">
+  <div class="col-12">
+    <span>
+<div class="btn-group">
+  <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white m-2" role="button" title="Update">Update</a>
+  <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white m-2 confirm-delete" role="button" title="Delete">Delete</a>
+{% endif %}
+    </div>
       </span>
     </div>
-      </div>
-    </div>
-      </div>
-    </div>
+  </div>
+
   </div>
 </div>
 </div>
