--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
+{{ block.super }}
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
 
@@ -25,7 +26,7 @@
 <section class="cart_area section_padding">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-6 order-lg-last mb-5">
+            <div class="col-12 col-lg-4 order-lg-last mb-5">
                 <p class="text-muted">
                     <h5 id="h5-padding">Your Profile:</h5>
                 </p>
@@ -40,43 +41,45 @@
                 </form>
             </div>
 
-            <div class="col-12 col-lg-6 order-lg-last mb-5">
+            <div class="col-12 col-lg-8 order-lg-last mb-5">
                 <p class="text-muted">
                     <h5 id="h5-padding">Order History:</h5>
                 </p>
-                <div class="order-history table-responsive">
-                    <table class="table table-sm table-borderless">
+                <div class="order-history table-responsive ml-2">
+                    <table class="table table-sm table-borderless table-hover">
                         <thead>
                             <tr>
-                            <th>Order Number</th>
-                            <th>Date</th>
-                            <th>Painting Title</th>
-                            <th>Order Total</th>
+                                <th>Order Number</th>
+                                <th>Date</th>
+                                <th>Painting Title</th>
+                                <th>Order Total</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for order in orders %}
                             <tr>
-                                <td><a href="{% url 'order_history' order.order_number %}" 
-                                    title="{{ order.order_number }}">{{ order.order_number|truncatechars:6 }}</a></td>
-                                <td>{{ order.date }}</td>
+                                <td><a href="{% url 'order_history' order.order_number %}"
+                                        title="{{ order.order_number }}">{{ order.order_number|truncatechars:6 }}</a>
+                                </td>
+                                <td>{{ order.date|date:"SHORT_DATE_FORMAT" }}</td>
                                 <td>
                                     <ul class="list-unstyled">
                                         {% for item in order.lineitems.all %}
-                                        <li class="small">                                          
+                                        <li class="small">
                                             <p class="my-0">{{ item.product.name }}</p>
                                             <p class="my-0">{{ item.product.size }}</p>
                                         </li>
                                         {% endfor %}
                                     </ul>
                                 </td>
-                                <td>{{ order.grand_total}}</td>
+                                <td class="float-right mr-2">€{{ order.grand_total}}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
-            </div>
+
+        </div>
         </div>
     </div>
 </section>
