--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -69,6 +69,13 @@
                         <span>
                         <a href="{% url 'view_cart' %}">
                             <i class="fa-solid fa-cart-shopping"></i>
+                            <span class="mx-2 show-total">
+                                {% if grand_total %}
+                                    €{{ grand_total|floatformat:2 }}
+                                {% else %}
+                                    €0.00
+                                {% endif %}
+                            </span>
                         </a>
                         </span>
                 </nav>
