Add number of search results to products template, fix button positions

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -95,9 +95,9 @@
         </tbody>
       </table>
       <div class="btn-group float-right">
-      <div class="checkout_btn_inner">
-        <a class="btn_1 text-white m-2" href="{% url 'products' %}">Continue Shopping</a>
-        <a class="btn_1 checkout_btn_1 text-white m-2" href="{% url 'checkout' %}">Proceed to checkout</a>
+      <div class="checkout_btn_inner">      
+        <a class="btn_1 checkout_btn_1 text-white m-2 float-right" href="{% url 'checkout' %}">Proceed to checkout</a>
+        <a class="btn_1 text-white m-2 float-right" href="{% url 'products' %}">Continue Shopping</a>
       </div>
     </div>
     
