--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -69,24 +69,19 @@
                 <p class="price">€ {{ product.price }}</p>
                 <div class="row">
                   <div class="col-12">
-
     </div>
       </div>
     </div>
-
-
-
       </div>
     </div>
   </div>
 </div>
-
 <div class="container">
 <div class="row text-center">
   <div class="col-12">    
       <form class="form" method="POST" action="{% url 'add_to_cart' product.id %}">
         {% csrf_token %}
-        <div class="btn-group">
+        <div class="btn-group float-center">
         <input class="form-control qty-input" type="hidden" name="quantity" value="1" min="0" max="1"
           data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
         <input type="submit" class="btn_1 m-2" role="button" value="Add to cart">      
