--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -65,6 +65,14 @@
         </div>
     
             <div class="row">
+                <div class="col-12 col-md-6 order-md-first">
+                    <p class="text-muted mt-3 text-center text-md-left">
+                        {% if search_term or current_categories or current_sorting != 'None_None' %}
+                            <span class="small"><a href="{% url 'products' %}"><strong>Show all Paintings </strong></a> | </span>
+                        {% endif %}
+                        {{ products|length }} Painting(s){% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                    </p>
+                </div>
                 <div class="col-md-12">
                     <div class="row">
                         {% for product in products %}
