--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,7 @@ a:hover {
 }
 .btn-group {
     width: 100%;
+    display: block;
 }
 
 /* Navigation bar */
@@ -189,7 +190,6 @@ a:hover {
 	background-color: #fff;
 	color: #B08EAD;
 }
-
 .product_image_area .single_product_text {
     margin: 30px 0 30px;
 }
