--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,7 +1,7 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
   <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
     <div class="toast-header text-success text-uppercase">
-      <i class="fa-regular fa-circle-check text-success"> </i>
+      <i class="fa-regular fa-circle-check text-success pr-1"> </i>
       <strong class="mr-auto">Success!</strong>
       <hr>
       <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
