--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,7 +1,7 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
   <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
     <div class="toast-header text-warning text-uppercase">
-      <i class="fa-solid fa-triangle-exclamation text-warning"></i>
+      <i class="fa-solid fa-triangle-exclamation text-warning pr-1"></i>
       <strong class="mr-auto">Warning!</strong>
       <hr>
       <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
