Style buttons on add to cart success toast

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -29,6 +29,7 @@
   color: #B08EAD!important;
 }
 
+
 /* Loading overlay */
 #loading-overlay {
 	display: none;
@@ -47,6 +48,7 @@
     margin: 0;
     height: 100%;
 }
+/* Form */
 #id_country {
   padding: 10px 12px;
   font-family: "Rubik", sans-serif;
