--- a/static/css/base.css
+++ b/static/css/base.css
@@ -290,6 +290,16 @@ i {
 .cart_area section_padding {
     padding: 50px 0px;
 }
+.cart-notification-wrapper > .btn_3 {
+	background-color: transparent;
+	border: 1px solid #B08EAD;
+	color: #B08EAD;
+	@include transform_time(0.5s);
+	&:hover{
+		background-color: #B08EAD;
+		color: #fff;
+	}
+}
 @media  (max-width: 576px) {
     .message-container {
         width: 280px;
