--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -45,9 +45,9 @@
             <i class="fas fa-lock ml-2"></i>
           </span>
         </a>
-        <a href="{% url 'products' %}" class="btn_1 btn-block rounded-0">
+        <a href="{% url 'products' %}" class="btn_1 btn-block rounded-0 text-white">
           <span class="icon">
-            <i class="fa-solid fa-cart-shopping mr-2"></i>
+            <i class="fa-solid fa-cart-shopping mr-2 text-white"></i>
           </span>
           <span class="text-uppercase">Continue Shopping</span>
         </a>
