Change details, update & delete icons to buttons on products page

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -85,9 +85,7 @@
                                 <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}"
                                     class="img-fluid">
                                 {% endif %}
-                                <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}
-                                    <span class="descriptive_text"><i class="fa-solid fa-arrow-up-right-from-square float-right pr-3" title="Click for details">
-                                    </i></span></a>
+                                <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a>
                                 </h3>                              
                                 {% if product.category %}
                                 <p><a href="{% url 'products' %}?category={{ product.category.name }}">Category:
@@ -100,16 +98,17 @@
                                 {% else %}
                                 <p>Price: € {{ product.price }}
                                     {% endif %}
-                                    {% if request.user.is_superuser %}
-                                    <span class="float-right">
-                                        <a href="{% url 'edit_product' product.id %}">
-                                            <i class="fa-regular fa-pen-to-square" title="Update"></i>
+                                <div class="button-group area mt-2">
+                                    <span><a href="{% url 'product_detail' product.id %}" class="btn_1 text-white small primary-border px-3 py-1" role="button">Details
                                         </a>
-                                        <a href="{% url 'delete_product' product.id %}" title="Delete"
-                                            class="confirm-delete">
-                                            <i class="fa-regular fa-trash-can" title="Delete"></i>
-                                        </a></span>
+                                
+                                    {% if request.user.is_superuser %}
+                                        <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white small primary-border px-3 py-1" role="button">Update
+                                            </a>
+                                        <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white small primary-border px-3 py-1" role="button">Delete
+                                            </a></span>
                                     {% endif %}
+                                </div>
                                 </p>
                             </div>
                         </div>
