--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -114,10 +114,16 @@
                         </div>
                         {% endfor %}
                     </div>
+                    <div class="btt-button shadow-sm">
+                        <a class="btt-link d-flex h-100">
+                            <i class="fas fa-arrow-up mx-auto my-auto"></i>
+                        </a>	
+                    </div>
                 </div>
             </div>
 
     </div>
+    
 </section>
 <!-- product list part end-->
 
@@ -128,6 +134,11 @@
 <script type="text/javascript">
     $(document).on('click', '.confirm-delete', function () {
         return confirm('Are you sure you want to delete the painting?');
+    })
+</script>
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
     })
 </script>
 {% endblock %}
