--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,27 +23,29 @@
         <div class="row py-3">
             <div class="col-lg-4 col-sm-4">
                 <div class="dropdown select_option">
-                    <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth" type="button" 
-                        id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Categories 
-                      </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="{% url 'products' %}?category=flowers">Flowers</a>
-                            <a class="dropdown-item" href="{% url 'products' %}?category=animals">Animals</a>
-                            <a class="dropdown-item" href="{% url 'products' %}?category=landscape">Landscape</a>
-                            <a class="dropdown-item" href="{% url 'products' %}?category=portrait">Portrait</a>
-                            <a class="dropdown-item" href="{% url 'products' %}?category=abstract">Abstract</a>
-                            <a class="dropdown-item"
-                                href="{% url 'products' %}?category=impressionism">Impressionism</a>
-                            <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still Life</a>
-                        </div>
+                    <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth"
+                        type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Categories
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="{% url 'products' %}?category=flowers">Flowers</a>
+                        <a class="dropdown-item" href="{% url 'products' %}?category=animals">Animals</a>
+                        <a class="dropdown-item" href="{% url 'products' %}?category=landscape">Landscape</a>
+                        <a class="dropdown-item" href="{% url 'products' %}?category=portrait">Portrait</a>
+                        <a class="dropdown-item" href="{% url 'products' %}?category=abstract">Abstract</a>
+                        <a class="dropdown-item" href="{% url 'products' %}?category=impressionism">Impressionism</a>
+                        <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still Life</a>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <div class="dropdown select_option">
-                    <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Formats 
-                      </button>
+                    <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth"
+                        type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Formats
+                    </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="{% url 'products' %}?format=Portrait">Portrait</a>
                         <a class="dropdown-item" href="{% url 'products' %}?format=Landscape">Landscape</a>
@@ -53,9 +55,11 @@
             </div>
             <div class="col-lg-4 col-sm-4">
                 <div class="dropdown select_option">
-                    <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="genric-btn primary circle e-large arrow dropdown-toggle dropdown-button-fullwidth"
+                        type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
                         Sort by price
-                      </button>
+                    </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=asc">Low to high</a>
                         <a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=desc">High to low</a>
@@ -63,70 +67,72 @@
                 </div>
             </div>
         </div>
-    
-            <div class="row">
-                <div class="col-12 col-md-6 order-md-first">
-                    <p class="text-muted mt-3 text-center text-md-left">
-                        {% if search_term or current_categories or current_sorting != 'None_None' %}
-                            <span class="small"><a href="{% url 'products' %}"><strong>Show all Paintings </strong></a> | </span>
-                        {% endif %}
-                        {{ products|length }} Painting(s){% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-                    </p>
-                </div>
-                <div class="col-md-12">
-                    <div class="row">
-                        {% for product in products %}
-                        <div class="col-lg-4 col-sm-4">
-                            <div class="single_product_item align-item-flex-end">
-                                {% if product.image %}
-                                <img src="{{ product.image.url }}" alt="{{ product.name }} {{ product.technique }}"
-                                    class="img-fluid">
-                                {% else %}
-                                <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}"
-                                    class="img-fluid">
+        <div class="row">
+            <div class="col-12 col-md-6 order-md-first">
+                <p class="text-muted mt-3 text-center text-md-left">
+                    {% if search_term or current_categories or current_sorting != 'None_None' %}
+                    <span class="small"><a href="{% url 'products' %}"><strong>Show all Paintings </strong></a> |
+                    </span>
+                    {% endif %}
+                    {{ products|length }} Painting(s){% if search_term %} found for
+                    <strong>"{{ search_term }}"</strong>{% endif %}
+                </p>
+            </div>
+            <div class="col-md-12">
+                <div class="row">
+                    {% for product in products %}
+                    <div class="col-lg-4 col-sm-4">
+                        <div class="single_product_item align-item-flex-end">
+                            {% if product.image %}
+                            <img src="{{ product.image.url }}" alt="{{ product.name }} {{ product.technique }}"
+                                class="img-fluid">
+                            {% else %}
+                            <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}"
+                                class="img-fluid">
+                            {% endif %}
+                            <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a>
+                            </h3>
+                            {% if product.category %}
+                            <p><a href="{% url 'products' %}?category={{ product.category.name }}">Category:
+                                    {{ product.category.friendly_name }}</a>
+                            </p>
+                            {% endif %}
+                            <p>Dimension: {{ product.size }}</p>
+                            {% if product.sold is True %}
+                            <p class="text-uppercase"><strong>sold</strong></p>
+                            {% else %}
+                            <p>Price: € {{ product.price }}
                                 {% endif %}
-                                <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a>
-                                </h3>                              
-                                {% if product.category %}
-                                <p><a href="{% url 'products' %}?category={{ product.category.name }}">Category:
-                                        {{ product.category.friendly_name }}</a>
-                                </p>
-                                {% endif %}
-                                <p>Dimension: {{ product.size }}</p>
-                                {% if product.sold is True %}
-                                <p class="text-uppercase"><strong>sold</strong></p>
-                                {% else %}
-                                <p>Price: € {{ product.price }}
-                                    {% endif %}
                                 <div class="button-group area mt-2">
-                                    <span><a href="{% url 'product_detail' product.id %}" class="btn_1 text-white small primary-border px-3 py-1" role="button">Details
+                                    <span><a href="{% url 'product_detail' product.id %}"
+                                            class="btn_1 text-white small primary-border px-3 py-1"
+                                            role="button">Details
                                         </a>
-                                
-                                    {% if request.user.is_superuser %}
-                                        <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white small primary-border px-3 py-1" role="button">Update
-                                            </a>
-                                        <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white small primary-border px-3 py-1" role="button">Delete
-                                            </a></span>
+                                        {% if request.user.is_superuser %}
+                                        <a href="{% url 'edit_product' product.id %}"
+                                            class="btn_1 text-white small primary-border px-3 py-1" role="button">Update
+                                        </a>
+                                        <a href="{% url 'delete_product' product.id %}"
+                                            class="btn_1 text-white small primary-border px-3 py-1 confirm-delete"
+                                            role="button">Delete
+                                        </a></span>
                                     {% endif %}
                                 </div>
-                                </p>
-                            </div>
+                            </p>
                         </div>
-                        {% endfor %}
                     </div>
-                    <div class="btt-button shadow-sm">
-                        <a class="btt-link d-flex h-100">
-                            <i class="fas fa-arrow-up mx-auto my-auto"></i>
-                        </a>	
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
-
+        </div>
     </div>
-    
 </section>
 <!-- product list part end-->
-
+<div class="btt-button shadow-sm">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up mx-auto my-auto"></i>
+    </a>	
+</div>
 {% endblock %}
 
 {% block postloadjs %}
