--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -128,7 +128,7 @@
     </div>
 </section>
 <!-- product list part end-->
-<div class="btt-button shadow-sm">
+<div class="btt-button shadow-sm position:fixed, bottom: 20px, right: 20px">
     <a class="btt-link d-flex h-100">
         <i class="fas fa-arrow-up mx-auto my-auto"></i>
     </a>	
