--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,33 +1,45 @@
-/* Stripe Styles */
 .StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
   height: 40px;
   padding: 10px 12px;
   border: 1px solid transparent;
-  border-radius: 0px;
+  border-radius: 10px;
   background-color: white;
   box-shadow: 0 1px 3px 0 #e6ebf1;
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
 }
-
 .StripeElement--focus,
 .stripe-style-input:focus,
 .stripe-style-input:active {
   box-shadow: 0 1px 3px 0 #cfd7df;
-  border-color: #B08EAD;
 }
-
 .StripeElement--webkit-autofill {
   background-color: #fefde5 !important;
 }
-
 .stripe-style-input::placeholder {
     color: #aab7c4;
 }
+.fieldset-label {
+    position: relative;
+    right: .5rem;
+}
+#payment-form .form-control,
+#card-element {
+    color: #000;
+    border: 1px solid #795376;
+}
+select,
+select option {
+  color: #795376;
+}
+select:invalid,
+select option[value=""] {
+  color: #aab7c4 !important;
+}
 .text-info {
-  color: #B08EAD!important;
+  color: #795376!important;
 }
 
 
