Update back-to-top button

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -126,10 +126,12 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm position:fixed, bottom: 20px, right: 20px">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up mx-auto my-auto"></i>
-        </a>	
+    <div class="back-to-top">
+        <p>
+            <a class="btt-link h-100">
+                <i class="fa-regular fa-circle-up"></i>
+            </a>
+        </p>    	
     </div>
 </section>
 <!-- product list part end-->
