--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -77,7 +77,6 @@
                 </div>
             </div>
         </div>
-
         <div class="col-12 col-lg-6">
             <p class="text-muted"><h5 id="h5-padding">Please fill out the form to complete your order.</h5></p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
@@ -144,13 +143,13 @@
     </div>
   </div>
 </section>
-<!--================End Checkout Area =================-->
+<!--End Checkout Area -->
 
 {% endblock %}
-
 {% block postloadjs %}
 {{ block.super }}
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
-<script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+<script src="{% static 'checkout/js/stripe_elements.js' %}">
+</script>
 {% endblock %}
