--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -4,17 +4,16 @@
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="logo">
-                    <a class="navbar-brand logo-font logo-text" href="{% url 'home' %}">
-                         Hanneles Art
+                        <a class="navbar-brand logo-font logo-text" href="{% url 'home' %}">
+                            Hanneles Art
                             <p class="logo-subtext">Gallery & Academy</p>
-                        </div>
-                        </a>
+                    </div>
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="menu_icon"><i class="fas fa-bars"></i></span>
                     </button>
-
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item d-block d-lg-none">
@@ -23,8 +22,8 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_1"
-                                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_1" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Art Gallery
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
@@ -32,18 +31,20 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=flowers">Flowers</a>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=animals">Animals</a>
-                                    <a class="dropdown-item" href="{% url 'products' %}?category=landscape">Landscape</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=landscape">Landscape</a>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=portrait">Portrait</a>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=abstract">Abstract</a>
-                                    <a class="dropdown-item" href="{% url 'products' %}?category=impressionism">Impressionism</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=impressionism">Impressionism</a>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still
                                         Life</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3"
-                                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                     My Account
+                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    My Account
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                                     {% if request.user.is_authenticated %}
@@ -60,24 +61,25 @@
                             </li>
                         </ul>
                     </div>
-                        <div class="search-container">
-                            <form class="search-form" method="GET" action="{% url 'products' %}">
-                            <input type="text" class="search-input" name="q" placeholder="Search..." aria-label="Search">
+                    <div class="search-container">
+                        <form class="search-form" method="GET" action="{% url 'products' %}">
+                            <input type="text" class="search-input" name="q" placeholder="Search..."
+                                aria-label="Search">
                             <button class="search-button" type="submit"><i class="fas fa-search"></i></button>
-                          </form>
-                        </div>
-                        <span>
+                        </form>
+                    </div>
+                    <span>
                         <a href="{% url 'view_cart' %}">
                             <i class="fa-solid fa-cart-shopping"></i>
                             <span class="mx-2 show-total">
                                 {% if grand_total %}
-                                    €{{ grand_total|floatformat:2 }}
+                                €{{ grand_total|floatformat:2 }}
                                 {% else %}
-                                    €0.00
+                                €0.00
                                 {% endif %}
                             </span>
                         </a>
-                        </span>
+                    </span>
                 </nav>
             </div>
         </div>
