--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block accountcss %}
+{% block allauthcss %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'account/css/account.css' %}">
+<link rel="stylesheet" href="{% static 'css/base.css' %}">
 {% endblock %}
 
 {% block content %}
