--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -125,11 +125,11 @@
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
                 <div class="btn-group" role="group">
-                    <a class="btn_1 text-white m-2 text-center btn-responsive" role="button" href="{% url 'view_cart' %}"><span class="icon">
+                    <a class="btn_1 text-white text-center btn-responsive" role="button" href="{% url 'view_cart' %}"><span class="icon">
                             <i class="fas fa-chevron-left text-white pr-1"></i>
                         </span>
                         <span> Update Cart</span></a>
-                    <button id="submit-button" class="btn_1 m-2 btn-responsive" role="button"><span>Complete Order </span>
+                    <button id="submit-button" class="btn_1 btn-responsive" role="button"><span>Complete Order </span>
                         <span class="icon"><i class="fas fa-lock pl-1 text-white"></i></span>
                     </button>
                 </div>
