Add allauth.css to style allauth forms only

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -23,7 +23,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <h5>Update a painting</h5>
+            <h2 class="mt-20">Update a painting</h2>
             <hr>          
         </div>
     </div>
