--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block allauthcss %}
+{% block extra_css %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'css/base.css' %}">
+<link rel="stylesheet" href="{% static '/css/allauth.css' %}">
 {% endblock %}
 
 {% block content %}
-  <!-- breadcrumb part start-->
-  <section class="breadcrumb_part">
+<section class="breadcrumb_part">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -19,23 +18,16 @@
         </div>
     </div>
 </section>
-<!-- breadcrumb part end-->
-<!--================login_part Area =================-->
-<!-- <section class="login_part section_padding"> -->
-    <div class="container">
-        <div class="row align-items-center">            
-            <div class="col-lg-8 col-md-8">
-                <div class="login_part_form">
-                    <div class="login_part_form_iner">
-
-                        {% block inner_content %}
-                        {% endblock %}
-
-                    </div>
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-8 col-md-8">
+            <div class="login_part_form">
+                <div class="login_part_form_iner">
+                    {% block inner_content %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
     </div>
-<!-- </section> -->
-<!--================login_part end =================-->
+</div>
 {% endblock %}
